--- a/project.config
+++ b/project.config
@@ -7,10 +7,13 @@
 [access "refs/for/refs/*"]
 	read = group user/Wojciech Pelka (WojciechPelka93)
 	push = group user/Wojciech Pelka (WojciechPelka93)
+	label-Code-Review = -2..+2 group Registered Users
 	label-Code-Review = -2..+2 group user/Wojciech Pelka (WojciechPelka93)
+	label-Verified = -1..+1 group Registered Users
 	label-Verified = -1..+1 group user/Wojciech Pelka (WojciechPelka93)
 	rebase = group user/Wojciech Pelka (WojciechPelka93)
 	removeReviewer = group user/Wojciech Pelka (WojciechPelka93)
+	submit = group Registered Users
 	submit = group user/Wojciech Pelka (WojciechPelka93)
 [access "refs/heads/*"]
 	read = group user/Wojciech Pelka (WojciechPelka93)
